packages/reference-rs/tests/tasty/cases/parse_error/input/ok.ts
export interface Ok {
  x: string
}
